--- a/public/main.css
+++ b/public/main.css
@@ -11,11 +11,11 @@ body {
   background-color: #FFFFFF;
 }
 #bomb-img {
-  width: 33%;
+  width: 29%;
   height: auto;
   position: absolute;
-  left: 43%;
-  bottom: 27%;
+  left: 40%;
+  bottom: 25%;
 }
 .mini-bomb {
   width: 10%;
@@ -65,6 +65,7 @@ body {
   clear: right;
   left: 500px;
   top: 10px;
+  font-size: 14px;
 }
 .top-btn {
   background-color: #D12F00;
